name:                bf-interpreter
version:             0.1.0.0
synopsis:            Brainf*ck interpreter.
-- description:         
license:             MIT
license-file:        LICENSE
author:              Shubham Lagwankar
maintainer:          shubhu105@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable bf-interpreter
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7
                       , mtl >=2.2 && <2.3
                       , containers >=0.5 && <0.6
                       , microlens-platform>= 0.1.4.0
                       , vector>= 0.10.0.1
  -- hs-source-dirs:      
  default-language:    Haskell2010
